--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!-- First Container -->
 <div id="who" class="container-fluid bg-1 text-center">
   <h3 class="margin">Who Am I?</h3>
-  <img src="me.JPE" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <img src="me.JPG" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
   <h3>I'm an IT student</h3>
 </div>
 
