--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
+
   <title>Vương Chí Sơn</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -49,6 +53,12 @@
   .navbar-nav  li a:hover {
       color: #1abc9c !important;
   }
+  #googleMap {
+      width: 100%;
+      height: 400px;
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%);
+  }  
   </style>
 </head>
 <body id="me" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -60,7 +70,7 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+        <span class="icon-bar"></span>                      
       </button>
       <a class="navbar-brand" href="#me">Me</a>
     </div>
@@ -69,6 +79,8 @@
         <li><a href="#who">WHO</a></li>
         <li><a href="#what">WHAT</a></li>
         <li><a href="#where">WHERE</a></li>
+        <li><a href="#project">PROJECT</a></li>
+        <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
   </div>
@@ -77,7 +89,7 @@
 <!-- First Container -->
 <div id="who" class="container-fluid bg-1 text-center">
   <h3 class="margin">Who Am I?</h3>
-  <img src="me.JPG" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <img src="me.JPG" class="img-responsive img-circle margin" style="display:inline" alt="Me" width="350" height="350">
   <h3>I'm an IT student</h3>
 </div>
 
@@ -106,6 +118,66 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
+  </div>
+</div>
+
+
+<!-- <div id="googleMap"></div>
+<script>
+function myMap() {
+var myCenter = new google.maps.LatLng(41.878114, -87.629798);
+var mapProp = {center:myCenter, zoom:12, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
+var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+var marker = new google.maps.Marker({position:myCenter});
+marker.setMap(map);
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script> -->
+<!--
+To use this code on your website, get a free API key from Google.
+Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
+-->
+
+<!-- Project -->
+<div id="project" class="container-fluid bg-2 text-center">    
+<h3 class="margin">Project</h3><br>
+  <div class="row">
+  	<div class="col-sm-4">
+  		<p>HTTP Server</p>
+  	</div>
+  	<div class="col-sm-4">
+  		<p>Thư viện Random</p>
+  	</div>
+  	<div class="col-sm-4">
+  		<p>Đọc Truyện Kim Dung</p>
+  	</div>
+  	
+  </div>
+</div>
+
+
+<!-- Contact -->
+<div id="contact" class="container-fluid bg-3 text-center">    
+<h3 class="margin">Contact</h3><br>
+  <div class="row">
+  	<div class="col-sm-3">
+  		<p>Phone</p>
+  	</div>
+  	<div class="col-sm-3">
+  		<p>Facebook</p>
+  	</div>
+  	<div class="col-sm-3">
+  		<p>Github</p>
+  	</div>
+  	<div class="col-sm-3">
+  		<p>Email</p>
+  	</div>
+  	<div class="col-sm-3">
+  		<p>Email</p>
+  	</div>
+  	<div class="col-sm-3">
+  		<p>Email</p>
+  	</div>
   </div>
 </div>
 
