--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
+  <link rel="shortcut icon" type="image/ico" href="s.ico"/>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -26,14 +26,22 @@
       color: #ffffff;
   }
   .bg-2 { 
-      background-color: #474e5d; /* Dark Blue */
+      background-color: #2F343E; 
       color: #ffffff;
   }
   .bg-3 { 
+      background-color: #474e5d; /* Dark Blue */
+      color: #ffffff;
+  }
+  .bg-4 { 
+      background-color: #848993; /* Dark Blue */
+      color: #ffffff;
+  }
+  .bg-5 { 
       background-color: #ffffff; /* White */
       color: #555555;
   }
-  .bg-4 { 
+  .bg-6 { 
       background-color: #2f2f2f; /* Black Gray */
       color: #fff;
   }
@@ -139,17 +147,20 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 -->
 
 <!-- Project -->
-<div id="project" class="container-fluid bg-2 text-center">    
+<div id="project" class="container-fluid bg-4 text-center">    
 <h3 class="margin">Project</h3><br>
   <div class="row">
   	<div class="col-sm-4">
-  		<p>HTTP Server</p>
+  		<h4>HTTP Server</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
   	</div>
   	<div class="col-sm-4">
-  		<p>Thư viện Random</p>
+  		<h4>Thư viện Random</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
   	</div>
   	<div class="col-sm-4">
-  		<p>Đọc Truyện Kim Dung</p>
+  		<h4>Đọc Truyện Kim Dung</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
   	</div>
   	
   </div>
@@ -157,32 +168,32 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 
 
 <!-- Contact -->
-<div id="contact" class="container-fluid bg-3 text-center">    
+<div id="contact" class="container-fluid bg-5 text-center">    
 <h3 class="margin">Contact</h3><br>
   <div class="row">
-  	<div class="col-sm-3">
-  		<p>Phone</p>
+  	<div class="col-sm-6">
+  		<div>Phone: <a href="tel:096-677-2910">0966772910</a></div>
   	</div>
-  	<div class="col-sm-3">
-  		<p>Facebook</p>
+
+  	<div class="col-sm-6">
+  		<div>Facebook: <a href="https://facebook.com/VuongChiSon">Vương Chí Sơn</a></div>
   	</div>
-  	<div class="col-sm-3">
-  		<p>Github</p>
+
+  	<div class="col-sm-6">
+  		<div>Github: <a href="https://github.com/vuongchison">vuongchison</a></div>
   	</div>
-  	<div class="col-sm-3">
-  		<p>Email</p>
+
+  	<div class="col-sm-6">
+  		<div>Email: <a href="mailto: chison1997@gmail.com">chison1997@gmail.com</a></div>
   	</div>
-  	<div class="col-sm-3">
-  		<p>Email</p>
-  	</div>
-  	<div class="col-sm-3">
-  		<p>Email</p>
-  	</div>
+
   </div>
+
+
 </div>
 
 <!-- Footer -->
-<footer class="container-fluid bg-4 text-center">
+<footer class="container-fluid bg-6 text-center">
   <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
 </footer>
 
