--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
   	</div>
   	<div class="col-sm-4">
-  		<h4>Thư viện Random</h4>
+  		<h4>Random</h4>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
   	</div>
   	<div class="col-sm-4">
-  		<h4>Đọc Truyện Kim Dung</h4>
+  		<h4>Search</h4>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
   	</div>
   	
